Regression: Clicking over empty viewport creates undo step in sculpt mode #104174

Closed
opened 2023-01-27 13:26:15 +01:00 by CODACOD · 16 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: 3.4
Worked: 3.3

Short description of error
click any where in the viewport register as an step

Exact steps for others to reproduce the error

  • Open default sculpting template
  • Click with default brush over empty viewport (registers an undo step)

{F14203314}]

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: 3.4 Worked: 3.3 **Short description of error** click any where in the viewport register as an step **Exact steps for others to reproduce the error** - Open default sculpting template - Click with default brush over empty viewport (registers an undo step) {[F14203314](https://archive.blender.org/developer/F14203314/2023-01-27_15-14-05.mp4)}]
Author

Added subscriber: @CODACOD

Added subscriber: @CODACOD
Pratik Borhade changed title from undo/redo steps to Regression: Clicking over empty viewport creates undo step in sculpt mode 2023-01-30 13:18:12 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscribers: @ideasman42, @JosephEagar

Added subscribers: @ideasman42, @JosephEagar
Member

Git bisect points to 11bdc321a2
Though commit is reverted by Campbell.
Can also replicate with and without this commit: f68e50a263
Not sure which commit is real culprit
cc @ideasman42
cc @JosephEagar

Git bisect points to 11bdc321a2 Though commit is reverted by Campbell. Can also replicate with and without this commit: f68e50a263 Not sure which commit is real culprit cc @ideasman42 cc @JosephEagar

This might have been caused by eae36be372, I don't think it's related to clearing the redo panel.

This might have been caused by eae36be372, I don't think it's related to clearing the redo panel.

Removed subscriber: @ideasman42

Removed subscriber: @ideasman42

Added subscriber: @mont29

Added subscriber: @mont29

Not sure this should even be tagged as #core tbh, it's like tagging any missing update as dependency_graph. :P

Moving under the 'other modules responsibility' column of Core workboard until further investigation by sculpt/paint devs is done.

Not sure this should even be tagged as #core tbh, it's like tagging any missing update as `dependency_graph`. :P Moving under the 'other modules responsibility' column of Core workboard until further investigation by sculpt/paint devs is done.
Bastien Montagne added this to the Core project 2023-02-09 15:42:54 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:20:29 +01:00
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:10:51 +01:00
Brecht Van Lommel added this to the 3.5 milestone 2023-02-15 10:26:16 +01:00
Member

Fixed in 7f256e0d33

Fixed in 7f256e0d33dd545c6527828a05aef61beb30d8ab
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-02-23 07:38:38 +01:00
Member

The fix also needs to go into 3.5-release.
Reopening

The fix also needs to go into 3.5-release. Reopening
Blender Bot added
Status
Confirmed
and removed
Status
Archived
labels 2023-02-24 07:31:00 +01:00

@JosephEagar The commit log states:

The first is that the code actually deliberately detects if nothing happened and pushed an undo step, a bugfix for a problem that no longer exists.

It's generally best to include a reference to the bug-ID / commit SHA1, so any follow up changes can be properly investigated.


Unfortunately it's not possible to reply on commits, so replying here.

@JosephEagar The commit log states: > The first is that the code actually deliberately detects if nothing happened and pushed an undo step, a bugfix for a problem that no longer exists. It's generally best to include a reference to the bug-ID / commit SHA1, so any follow up changes can be properly investigated. ---- Unfortunately it's not possible to reply on commits, so replying here.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-02-24 20:14:08 +01:00
Author

this issue still exists in newer builds of blender 3.5 and 3.6 . so why this report closed by @JosephEagar . is there work on fixing this issue?

this issue still exists in newer builds of blender 3.5 and 3.6 . so why this report closed by @JosephEagar . is there work on fixing this issue?
CODACOD reopened this issue 2023-03-19 22:07:48 +01:00
Blender Bot added
Status
Confirmed
and removed
Status
Archived
labels 2023-03-19 22:08:06 +01:00

I'm able to reproduce this issue following the video in the description in 3.4.1, but not in the latest 3.6.

@CODACOD which steps exactly reproduce the issue in 3.5 or 3.6?

I'm able to reproduce this issue following the video in the description in 3.4.1, but not in the latest 3.6. @CODACOD which steps exactly reproduce the issue in 3.5 or 3.6?
Brecht Van Lommel added
Status
Needs Information from User
and removed
Status
Confirmed
labels 2023-03-21 10:50:52 +01:00
Author

@brecht this bug was in blender 3.5 2/24/2023 build . now i updated to 3.5 3/22/2023 build and this issue has been fixed 👍

@brecht this bug was in blender 3.5 2/24/2023 build . now i updated to 3.5 3/22/2023 build and this issue has been fixed 👍
Blender Bot added
Status
Archived
and removed
Status
Needs Information from User
labels 2023-03-22 04:32:41 +01:00
Brecht Van Lommel added
Status
Resolved
and removed
Status
Archived
labels 2023-03-22 08:17:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104174
No description provided.